tests/negative/neg_own_target_not_null.safe
-- Test: neg_own_target_not_null
-- Description: Moving into a target that is not provably null.
-- Expected: REJECT move_target_not_null

package move_target_not_null_test

   type payload is record
      value : integer
      next : payload

   function bad_move
      source : not null payload = (value = 1, next = null)
      target : not null payload = (value = 2, next = null)

      target = source  -- ERROR: target is not provably null
